--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 		</div>
 
-        <script src="/ammo.js"></script>
+        <script src="./ammo.js"></script>
 
 		<script type="importmap">
 			{
@@ -24,6 +24,6 @@
 			}
 		</script>
 
-        <script type="module" src="/main.js"> </script>
+        <script type="module" src="./main.js"> </script>
 	</body>
 </html>
